--- a/Site/index.html
+++ b/Site/index.html
@@ -7,12 +7,13 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Eagle+Lake" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
-<body  class=" grey lighten-3">
+<body  class="blue-grey darken-4 ">
   <nav class="grey darken-4" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="http://www.antir.sca.org/Upcoming/" class="brand-logo">An Tir</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">12TH NIGHT </a></li>
         <li><a href="QRT.html">QUEEN'S RAPIER CHAMPIONSHIP </a></li>
@@ -36,12 +37,20 @@
     </div>
   </nav>
   <div class="section no-pad-bot" id="index-banner">
-    <div class="container z-depth-3">
+    <div class="container z-depth-3 blue-grey darken-2">
       <br><br>
-      <h1 class="header center red-text ">An Tir 12th Night 51 Celebration</h1>
+      <h1 class="header center amber-text lighten-3-text" style="text-shadow:  1px 0px 1px #bf360c, 0px 1px 1px #ff6f00 , 
+                                                                              2px 1px 1px #bf360c, 1px 2px 1px #ff6f00 ,
+                                                                              3px 2px 1px #bf360c, 2px 3px 1px #ff6f00 ,
+                                                                              4px 3px 1px #bf360c, 3px 4px 1px #ff6f00 ,
+                                                                              5px 4px 1px #bf360c, 4px 5px 1px #ff6f00 ,
+                                                                              6px 5px 1px #bf360c, 5px 6px 1px #ff6f00 ,
+                                                                              7px 6px 1px #bf360c">
+        An Tir 12th Night 51 Celebration
+      </h1>
       <div class="row center">
       <img src="img/an_tir_banner_noborder.jpg" class = "z-depth-2">
-        <h5 class="header col s12 light blue-grey-text darken-3-text ">Hosted by the Barony of Wyewood in SeaTac, Washington <br />
+        <h5 class="header col s12 light grey-text lighten-5-text ">Hosted by the Barony of Wyewood in SeaTac, Washington <br />
           January 13-15th, 2017 (A.S. LI)</h5>
       </div>
 
@@ -51,13 +60,13 @@
 
 
   <div class="container">
-    <div class="section blue-grey-text darken-3-text">
+    <div class="section grey-text lighten-5-text">
 
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center white-text"><img src = "img/pavilions_300x208.jpg" class = "z-depth-4"></h2>
+            <h2 class="center"> <img src = "img/pavilions_300x208.jpg" class = "z-depth-4"></h2>
             <h5 class="center">Site Info</h5>
 
             </div>
@@ -65,7 +74,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-             <h2 class="center white-text"><img src = "img/august_300x208.jpg"  class = "z-depth-4"></h2>
+             <h2  class="center"><img src = "img/august_300x208.jpg"  class = "z-depth-4"></h2>
             <h5 class="center">Schedule</h5>
 
             </div>
@@ -74,7 +83,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-             <h2 class="center white-text"><img src="img/babel_300x208.jpg"  class = "z-depth-4"></h2>
+             <h2 class="center"><img src="img/babel_300x208.jpg"  class = "z-depth-4"></h2>
             <h5 class="center">Event Staff</h5>
 
           
@@ -90,7 +99,7 @@
     </div>
   </div>
 
-  <footer class="page-footer red">
+  <footer class="page-footer red accent-4">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
