Applying Template Design

--- a/Site/QRT.html
+++ b/Site/QRT.html
@@ -1,6 +1,44 @@
-Greetings Rapier fighters of An Tir!
+	<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <title>An Tir 12th Night</title>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
-Come to 12th Night and fight for the honor to represent Queen and Kingdom as An Tir's Rapier champion. 
+	<div id="style"></div>
+
+  </head>
+  <body  class="blue-grey darken-4 ">
+	<div id="header"></div>
+    <script>
+        $("#header").load("includes/header.html");
+        $("#style").load("includes/styles.html");
+
+    </script>
+	
+	<div class="container">
+		<div class="section grey-text lighten-5-text">
+
+			<div class="section">
+
+<h2>Greetings Rapier fighters of An Tir!</h2>
+ <p>Come to 12th Night and fight for the honor to represent Queen and Kingdom as An Tir's Rapier champion. </p>
+ <p>More info Soon!</p>
+  			</div>
+		</div>
+	 </div>
+	
+	<div id="footer"></div>
 
 
-More info Soon!
+    <!--  Scripts-->
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+   <script>
+        $("#footer").load("includes/footer.html");
+    </script>
+
+	</body>
+</html>
+
