--- a/Site/index.html
+++ b/Site/index.html
@@ -66,7 +66,7 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center"> <img src = "img/pavilions_300x208.jpg" class = "z-depth-4"></h2>
+            <h2 class="center"> <img src = "img/pavilions.png" class = "responsive-img z-depth-4"></h2>
             <h5 class="center">Site Info</h5>
 
             </div>
@@ -74,7 +74,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-             <h2  class="center"><img src = "img/august_300x208.jpg"  class = "z-depth-4"></h2>
+             <h2  class="center"><img src = "img/book.png"  class = "responsive-img z-depth-4"></h2>
             <h5 class="center">Schedule</h5>
 
             </div>
@@ -83,7 +83,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-             <h2 class="center"><img src="img/babel_300x208.jpg"  class = "z-depth-4"></h2>
+             <h2 class="center"><img src="img/babel.png"  class = "responsive-img z-depth-4"></h2>
             <h5 class="center">Event Staff</h5>
 
           
