--- a/Site/location.html
+++ b/Site/location.html
@@ -1,17 +1,57 @@
-Gate and Parking Information
-Reservations
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <title>An Tir 12th Night</title>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
+	<div id="style"></div>
+
+  </head>
+  <body  class="blue-grey darken-4 ">
+	<div id="header"></div>
+    <script>
+        $("#header").load("includes/header.html");
+        $("#style").load("includes/styles.html");
+
+    </script>
+	
+	<div class="container">
+		<div class="section grey-text lighten-5-text">
+
+			<div class="section">
+
+<h2>Gate and Parking Information</h2>
+ <h3>Reservations</h3>
  
 
-Double Tree by Hilton - Seatac Airport
-18740 International Boulevard
-Seattle, WA 98188
 
-Link for reservations https://resweb.passkey.com/Resweb.do?mode=welcome_ei_new&eventID=14550545
-Phone Number for reservations  1-800-HILTONS. (reference SCA 12th Night)
-*Rooms on the penthouse level are available for additional fees. Contact the event team at  TwelfthNIght2017@wyewood.org with your request.
-Event Location
-Double Tree by Hilton - Seatac Airport
+ <p>Double Tree by Hilton - Seatac Airport<br />
+18740 International Boulevard<br />
+Seattle, WA 98188</p>
+ <p><a href="https://resweb.passkey.com/Resweb.do?mode=welcome_ei_new&eventID=14550545">Link for reservations</a></p>
+ <p>Phone Number for reservations  1-800-HILTONS. (reference SCA 12th Night)</p>
+ <p>*Rooms on the penthouse level are available for additional fees. Contact the event team at  TwelfthNIght2017@wyewood.org with your request.</p>
+ <p>Event Location</p>
+ <p>Double Tree by Hilton - Seatac Airport<br />
+18740 International Boulevard<br />
+Seattle, WA 98188</p>
 
-18740 International Boulevard
+			</div>
+		</div>
+	 </div>
+	
+	<div id="footer"></div>
 
-Seattle, WA 98188
+
+    <!--  Scripts-->
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+   <script>
+        $("#footer").load("includes/footer.html");
+    </script>
+
+	</body>
+</html>
+
