--- a/Site/merchants.html
+++ b/Site/merchants.html
@@ -1,6 +1,43 @@
- Merchant Registration Packet:
- 
+	<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <title>An Tir 12th Night</title>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
-Pre-registration will be accepted beginning May 1st.
+	<div id="style"></div>
 
-Contact Xenox the Butcher CrazedCamel@gmail.com
+  </head>
+  <body  class="blue-grey darken-4 ">
+	<div id="header"></div>
+    <script>
+        $("#header").load("includes/header.html");
+        $("#style").load("includes/styles.html");
+
+    </script>
+	
+	<div class="container">
+		<div class="section grey-text lighten-5-text">
+
+			<div class="section">
+
+<h2> Merchant Registration Packet:</h2>
+ <p>Pre-registration will be accepted beginning May 1st.</p>
+ <p>Contact Xenox the Butcher CrazedCamel@gmail.com</p>
+
+				</div>
+		</div>
+	 </div>	<div id="footer"></div>
+
+
+    <!--  Scripts-->
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+   <script>
+        $("#footer").load("includes/footer.html");
+    </script>
+
+	</body>
+</html>
+
