--- a/Site/not_found.html
+++ b/Site/not_found.html
@@ -1,12 +1,40 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Not Found</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+	<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <title>An Tir 12th Night</title>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
+	<div id="style"></div>
+
   </head>
-  <body>
-    <h1>Page Not Found</h1>
-    <p>The requested page was not found.</p>
-  </body>
+  <body  class="blue-grey darken-4 ">
+	<div id="header"></div>
+    <script>
+        $("#header").load("includes/header.html");
+        $("#style").load("includes/styles.html");
+
+    </script>
+	<div class="container">
+		<div class="section grey-text lighten-5-text">
+
+			<div class="section">
+			<h2>Error</h2>
+ <p>Page not Found.</p>
+			</div>
+		</div>
+	 </div>
+	
+	<div id="footer"></div>
+
+
+    <!--  Scripts-->
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+   <script>
+        $("#footer").load("includes/footer.html");
+    </script>
+
+	</body>
 </html>
