Create style template for website

--- a/Site/index2.html
+++ b/Site/index2.html
@@ -16,23 +16,18 @@
         $("#style").load("includes/styles.html");
 
     </script>
+	<main>
   <div class="section no-pad-bot" id="index-banner">
     <div class="container z-depth-3 blue-grey darken-2">
       <br><br>
-      <h1 class="header center amber-text lighten-3-text" 
-	  style="text-shadow: 1px 0px 1px #b71c1c , 0px 1px 1px #ffab00 , 
-						  2px 1px 1px #b71c1c , 1px 2px 1px #ffab00 ,
-						  3px 2px 1px #b71c1c , 2px 3px 1px #ffab00 ,
-						  4px 3px 1px #b71c1c , 3px 4px 1px #ffab00 ,
-						  5px 4px 1px #b71c1c , 4px 5px 1px #ffab00 ,
-						  6px 5px 1px #b71c1c , 5px 6px 1px #ffab00 ,
-						  7px 6px 1px #b71c1c ">
+      <h1 class="header center amber-text lighten-3-text header-shadow" >
         An Tir 12th Night 51 Celebration
       </h1>
       <div class="row center">
       <img src="img/an_tir_banner_noborder.jpg" class = "responsive-img z-depth-2">
         <h5 class="header col s12 light grey-text lighten-5-text ">Hosted by the Barony of Wyewood in SeaTac, Washington <br />
           January 13-15th, 2017 (A.S. LI)</h5>
+		  <br><br>
       </div>
 
 
@@ -79,7 +74,7 @@
 
     </div>
   </div>
-
+</main>
   <div id="footer"></div>
 
 
