--- a/Site/not_found.html
+++ b/Site/not_found.html
@@ -16,16 +16,30 @@
         $("#style").load("includes/styles.html");
 
     </script>
-	<div class="container">
-		<div class="section grey-text lighten-5-text">
+		<main>
+	  <div class="section no-pad-bot" id="index-banner">
+    <div class="container z-depth-3 blue-grey darken-2">
+      <br><br>
+	  
+	  
+	  
+      <h2 class="header center amber-text lighten-3-text header-shadow" >
+       Error
+      </h2>
+      <div class="row center">
+      
+        <p class="grey-text lighten-6-text">Page not Found.</p>
+      </div>
+	  
+	  
 
-			<div class="section">
-			<h2>Error</h2>
- <p>Page not Found.</p>
-			</div>
-		</div>
-	 </div>
-	
+    <br><br>
+    </div>
+  </div>
+
+
+  
+	</main>
 	<div id="footer"></div>
 
 
