Update information from Liaden

--- a/Site/QRT.html
+++ b/Site/QRT.html
@@ -16,19 +16,35 @@
         $("#style").load("includes/styles.html");
 
     </script>
-	
-	<div class="container">
-		<div class="section grey-text lighten-5-text">
+		<main>
+	  <div class="section no-pad-bot" id="index-banner">
+    <div class="container z-depth-3 blue-grey darken-2">
+      <br><br>
+	  
+	  
+	  
+      <h2 class="header center amber-text lighten-3-text header-shadow" >
+       Greetings Rapier fighters of An Tir!
+      </h2>
+      <div class="row center">
+      
+        <p class="grey-text lighten-6-text">Come to 12th Night and fight for the honor to represent Queen and Kingdom as An Tir's Rapier champion.</p>
+		 <p class="grey-text lighten-6-text">Fight for the honor of the Queen of AnTir.</p> 
 
-			<div class="section">
+		 <p class="grey-text lighten-6-text">We are planning on a Sweet 16 format to be held Saturday evening.</p>
+      </div>
 
-<h2>Greetings Rapier fighters of An Tir!</h2>
- <p>Come to 12th Night and fight for the honor to represent Queen and Kingdom as An Tir's Rapier champion. </p>
- <p>More info Soon!</p>
-  			</div>
-		</div>
-	 </div>
-	
+
+  				  
+	  
+
+    <br><br>
+    </div>
+  </div>
+
+
+  
+	</main>
 	<div id="footer"></div>
 
 
@@ -41,4 +57,3 @@
 
 	</body>
 </html>
-
