--- a/Site/entertainment.html
+++ b/Site/entertainment.html
@@ -16,18 +16,39 @@
         $("#style").load("includes/styles.html");
 
     </script>
-	
-	<div class="container">
-		<div class="section grey-text lighten-5-text">
+		<main>
+	  <div class="section no-pad-bot" id="index-banner">
+    <div class="container z-depth-3 blue-grey darken-2">
+      <br><br>
+	  
+	  
+	  
+      <h2 class="header center amber-text lighten-3-text header-shadow" >
+       Entertainment
+      </h2>
+    <div class="row ">
+      <div class="container">
+        
+        <h4 class="header center amber-text lighten-3-text header-shadow" >
+       Knights Auction
+      </h4>
+      
+<p class="grey-text lighten-6-text">  Sponsored by Sir Rodrekr</p>
+<p class="grey-text lighten-6-text">In the past fifteen years, AnTir’s Knights Auction has raised over $25,000 for various charities (Make a Wish Foundation, Camp Erin, Leukemia and Lymphoma Society and more);  this year, funds will be given to RAINN.ORG </p>
+<p class="grey-text lighten-6-text">All items in the auction are either crafted by a member of Chivalry or sponsored by one. Past items have included lamp work beads, custom painted shield, hand sewn rag dolls, block printed fabric, and others. What will the Artisans of AnTir contribute this year?</p>
+<p class="grey-text lighten-6-text">Please contact Arcs Dearbhail (brynphalan@holdren-net.us) with your donation information (Sponsor, Maker, Description, Approximate Value). Forms will be printed to display with the auction item. </p>
+<p class="grey-text lighten-6-text">All items must be pre-registered by January 2, 2017. Photos of completed or similar items are appreciated to aid in the displaying of items as well as posting in advance so that the populace can plan their auction budgets.</p>
+<p class="grey-text lighten-6-text">Items must be at the auction tables no later than 10am Saturday January 14th.</p>
+<p class="grey-text lighten-6-text">Unsold items will be collected and claimed that evening or donated to Kingdom Largess. </p>
+      </div>
 
-			<div class="section">
+    <br><br>
+    </div>
+  </div>
 
-<h2>Entertainment</h2>
- <p>More Details comming soon.</p>
-			</div>
-		</div>
-	 </div>
-	
+
+  
+	</main>
 	<div id="footer"></div>
 
 
