--- a/Site/event-staff.html
+++ b/Site/event-staff.html
@@ -16,21 +16,36 @@
         $("#style").load("includes/styles.html");
 
     </script>
-	
-	<div class="container">
-		<div class="section grey-text lighten-5-text">
-
-			<div class="section">
-
-<h2>Event Staff</h2>
- <p>Event Steward:</p>
+		<main>
+	  <div class="section no-pad-bot" id="index-banner">
+    <div class="container z-depth-3 blue-grey darken-2">
+      <br><br>
+	  
+	  
+	  
+      <h2 class="header center amber-text lighten-3-text header-shadow" >
+       Event Staff
+      </h2>
+      <div class="container grey-text lighten-6-text">
+      <p>Event Steward:</p>
  <p>Liadain ni Sheanachain TwelfthNight2017@wyewood.org</p>
  <p>Contingency Deputy:</p>
  <p>Constantine Trewpeny jpfafman@yahoo.com</p>
-			</div>
-		</div>
-	 </div>
-	
+	  
+        
+      </div>
+
+
+ 
+	  
+
+    <br><br>
+    </div>
+  </div>
+
+
+  
+	</main>
 	<div id="footer"></div>
 
 
@@ -43,15 +58,3 @@
 
 	</body>
 </html>
-
-
-Event Staff
- 
-
-Event Steward:
-
-Liadain ni Sheanachain TwelfthNight2017@wyewood.org
-
-Contingency Deputy:
-
-Constantine Trewpeny jpfafman@yahoo.com
