--- a/Site/location.html
+++ b/Site/location.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -16,14 +16,22 @@
         $("#style").load("includes/styles.html");
 
     </script>
-	
-	<div class="container">
-		<div class="section grey-text lighten-5-text">
+		<main>
+	  <div class="section no-pad-bot" id="index-banner">
+    <div class="container z-depth-3 blue-grey darken-2">
+      <br><br>
+	  
+	  
+	  
+      <h2 class="header center amber-text lighten-3-text header-shadow" >
+       Gate and Parking Information
+      </h2>
+	  <h3 class="center">Reservations</h3>
+      <div class="container grey-text lighten-6-text">
+      
+        
 
-			<div class="section">
 
-<h2>Gate and Parking Information</h2>
- <h3>Reservations</h3>
  
 
 
@@ -37,11 +45,16 @@ Seattle, WA 98188</p>
  <p>Double Tree by Hilton - Seatac Airport<br />
 18740 International Boulevard<br />
 Seattle, WA 98188</p>
+	  
+	  
+<div>
+    <br><br>
+    </div>
+  </div>
 
-			</div>
-		</div>
-	 </div>
-	
+
+  
+	</main>
 	<div id="footer"></div>
 
 
@@ -54,4 +67,3 @@ Seattle, WA 98188</p>
 
 	</body>
 </html>
-
