--- a/Site/merchants.html
+++ b/Site/merchants.html
@@ -16,19 +16,34 @@
         $("#style").load("includes/styles.html");
 
     </script>
-	
-	<div class="container">
-		<div class="section grey-text lighten-5-text">
+		<main>
+	  <div class="section no-pad-bot" id="index-banner">
+    <div class="container z-depth-3 blue-grey darken-2">
+      <br><br>
+	  
+	  
+	  
+      <h2 class="header center amber-text lighten-3-text header-shadow" >
+       Merchant Registration Packet:
+      </h2>
+      <div class="row center">
+      
+        <p class="grey-text lighten-6-text">Pre-registration will be accepted beginning May 1st.</p>
+		<p class="grey-text lighten-6-text">Contact Xenox the Butcher CrazedCamel@gmail.com</p>
+      </div>
 
-			<div class="section">
 
-<h2> Merchant Registration Packet:</h2>
- <p>Pre-registration will be accepted beginning May 1st.</p>
- <p>Contact Xenox the Butcher CrazedCamel@gmail.com</p>
+	  
+	  
 
-				</div>
-		</div>
-	 </div>	<div id="footer"></div>
+    <br><br>
+    </div>
+  </div>
+
+
+  
+	</main>
+	<div id="footer"></div>
 
 
     <!--  Scripts-->
@@ -40,4 +55,3 @@
 
 	</body>
 </html>
-
