--- a/Site/schedule.html
+++ b/Site/schedule.html
@@ -16,18 +16,32 @@
         $("#style").load("includes/styles.html");
 
     </script>
-	
-	<div class="container">
-		<div class="section grey-text lighten-5-text">
+		<main>
+	  <div class="section no-pad-bot" id="index-banner">
+    <div class="container z-depth-3 blue-grey darken-2">
+      <br><br>
+	  
+	  
+	  
+      <h2 class="header center amber-text lighten-3-text header-shadow" >
+       Event Schedule
+      </h2>
+      <div class="row center">
+      
+        <p class="grey-text lighten-6-text">No information yet - come back later</p>
+      </div>
 
-			<div class="section">
 
-<h2>Event Schedule</h2>
- <p>More Details comming soon.</p>
- 			</div>
-		</div>
-	 </div>
-	
+ 				  
+	  
+
+    <br><br>
+    </div>
+  </div>
+
+
+  
+	</main>
 	<div id="footer"></div>
 
 
