--- a/Site/volunteers.html
+++ b/Site/volunteers.html
@@ -16,18 +16,31 @@
         $("#style").load("includes/styles.html");
 
     </script>
-	
-<div class="container">
-		<div class="section grey-text lighten-5-text">
+		<main>
+	  <div class="section no-pad-bot" id="index-banner">
+    <div class="container z-depth-3 blue-grey darken-2">
+      <br><br>
+	  
+	  
+	  
+      <h2 class="header center amber-text lighten-3-text header-shadow" >
+       Volunteers
+      </h2>
+      <div class="row center">
+      
+        <p class="grey-text lighten-6-text">Teamwork Makes the Dream Work</p>
+		 <p class="grey-text lighten-6-text">Currently seeking volunteers to organize site tokens and decorations. Contact the <a href="mailto:TwelfthNight2017@wyewood.org">Event Steward</a>.</p>
+      </div>
 
-			<div class="section">
+  
 
-<p>Teamwork Makes the Dream Work</p>
- <p>Currently seeking volunteers to organize site tokens and decorations. Contact the Event Steward.</p>
-  			</div>
-		</div>
-	 </div>
-	
+    <br><br>
+    </div>
+  </div>
+
+
+  
+	</main>
 	<div id="footer"></div>
 
 
