Fixed some menues and styles

--- a/Site/QRT.html
+++ b/Site/QRT.html
@@ -18,15 +18,16 @@
     </script>
 		<main>
 	  <div class="section no-pad-bot" id="index-banner">
-    <div class="container z-depth-3 blue-grey darken-2">
+    <div class="container z-depth-3 blue-grey darken-2  flow-text">
       <br><br>
 	  
 	  
 	  
       <h2 class="header center amber-text lighten-3-text header-shadow" >
-       Greetings Rapier fighters of An Tir!
+       Greetings Rapier fighters<br /> of An Tir!
       </h2>
       <div class="row center">
+      <div class="container">
       
         <p class="grey-text lighten-6-text">Come to 12th Night and fight for the honor to represent Queen and Kingdom as An Tir's Rapier champion.</p>
 		 <p class="grey-text lighten-6-text">Fight for the honor of the Queen of AnTir.</p> 
@@ -39,6 +40,7 @@
 	  
 
     <br><br>
+    </div>
     </div>
   </div>
 
