--- a/Site/event-staff.html
+++ b/Site/event-staff.html
@@ -26,10 +26,10 @@
       <h2 class="header center amber-text lighten-3-text header-shadow" >
        Event Staff
       </h2>
-      <div class="container grey-text lighten-6-text">
-      <p>Event Steward:</p>
+      <div class="container grey-text lighten-6-text flow-text">
+      <p class="amber-text lighten-3-text ">Event Steward:</p>
  <p>Liadain ni Sheanachain TwelfthNight2017@wyewood.org</p>
- <p>Contingency Deputy:</p>
+ <p class="amber-text lighten-3-text ">Contingency Deputy:</p>
  <p>Constantine Trewpeny jpfafman@yahoo.com</p>
 	  
         
