--- a/Site/index.html
+++ b/Site/index.html
@@ -19,7 +19,7 @@
     </div>
 	<main>
   <div class="section no-pad-bot" id="index-banner">
-    <div class="container z-depth-3 blue-grey darken-2">
+    <div class="container z-depth-3 blue-grey darken-2  flow-text">
       <br><br>
       <h1 class="header center amber-text lighten-3-text header-shadow" >
         An Tir 12th Night 51 Celebration
@@ -43,20 +43,20 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <a class="center" href="location.html">
-				<img src = "img/pavilions_300x208.jpg" class = "responsive-img z-depth-4">
+           <h5 class="center"> <a class="grey-text lighten-5-text" href="location.html">
+				<img src = "img/pavilions_300x208.jpg" class = "responsive-img z-depth-4"><br />Site Info
 			</a>
-            <h5 class="center">Site Info</h5>
+            </h5>
 
             </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-             <a class="center" href="schedule.html">
-				<img src = "img/august_300x208.jpg"  class = "responsive-img z-depth-4">
+            <h5 class="center"> <a class="grey-text lighten-5-text" href="schedule.html">
+				<img src = "img/august_300x208.jpg"  class = "responsive-img z-depth-4"> <br />Schedule
 			</a>
-            <h5 class="center">Schedule</h5>
+          </h5>
 
             </div>
           
@@ -64,10 +64,10 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-             <a class="center" href="event-staff.html">
-				<img src="img/babel_300x208.jpg"  class = "responsive-img z-depth-4">
+            <h5 class="center"> <a class="grey-text lighten-5-text" href="event-staff.html">
+				<img src="img/babel_300x208.jpg"  class = "responsive-img z-depth-4"><br />Event Staff
 			 </a>
-            <h5 class="center">Event Staff</h5>
+            </h5>
 
           
           </div>
