--- a/Site/schedule.html
+++ b/Site/schedule.html
@@ -18,7 +18,7 @@
     </script>
 		<main>
 	  <div class="section no-pad-bot" id="index-banner">
-    <div class="container z-depth-3 blue-grey darken-2">
+    <div class="container z-depth-3 blue-grey darken-2   flow-text">
       <br><br>
 	  
 	  
