--- a/Site/location.html
+++ b/Site/location.html
@@ -18,7 +18,7 @@
     </script>
 		<main>
 	  <div class="section no-pad-bot" id="index-banner">
-    <div class="container z-depth-3 blue-grey darken-2">
+    <div class="container z-depth-3 blue-grey darken-2  flow-text">
       <br><br>
 	  
 	  
@@ -26,7 +26,7 @@
       <h2 class="header center amber-text lighten-3-text header-shadow" >
        Gate and Parking Information
       </h2>
-	  <h3 class="center">Reservations</h3>
+	  
       <div class="container grey-text lighten-6-text">
       
         
@@ -34,17 +34,18 @@
 
  
 
-
+<p class="amber-text lighten-3-text">Event Location</p>
  <p>Double Tree by Hilton - Seatac Airport<br />
 18740 International Boulevard<br />
 Seattle, WA 98188</p>
+<p class="amber-text lighten-3-text">Reservations</p>
  <p><a href="https://resweb.passkey.com/Resweb.do?mode=welcome_ei_new&eventID=14550545">Link for reservations</a></p>
  <p>Phone Number for reservations  1-800-HILTONS. (reference SCA 12th Night)</p>
  <p>*Rooms on the penthouse level are available for additional fees. Contact the event team at  TwelfthNIght2017@wyewood.org with your request.</p>
- <p>Event Location</p>
- <p>Double Tree by Hilton - Seatac Airport<br />
-18740 International Boulevard<br />
-Seattle, WA 98188</p>
+
+
+<p class="amber-text lighten-3-text">Parking</p>
+<p>Parking at the hotel is $12 per day. Guests of the hotel receive in/out privileges. </p>
 	  
 	  
 <div>
