--- a/Site/merchants.html
+++ b/Site/merchants.html
@@ -18,7 +18,7 @@
     </script>
 		<main>
 	  <div class="section no-pad-bot" id="index-banner">
-    <div class="container z-depth-3 blue-grey darken-2">
+    <div class="container z-depth-3 blue-grey darken-2  flow-text">
       <br><br>
 	  
 	  
@@ -26,11 +26,14 @@
       <h2 class="header center amber-text lighten-3-text header-shadow" >
        Merchant Registration Packet:
       </h2>
-      <div class="row center">
+      <div class="row center ">
+
+      <div class="container">
       
         <p class="grey-text lighten-6-text">Pre-registration will be accepted beginning May 1st.</p>
 		<p class="grey-text lighten-6-text">Contact Xenox the Butcher CrazedCamel@gmail.com</p>
       </div>
+      
 
 
 	  
