Removing details about Reservations

--- a/Site/location.html
+++ b/Site/location.html
@@ -33,21 +33,22 @@
 
 
  
+<p class="amber-text lighten-3-text">Site Fee</p>
+<p>Adults, $25 (member discount -$5). </p>
+<p>Youth under 18, FREE</p>
 
+<p class="amber-text lighten-3-text">Site Opens</p> 
+<p> 3pm on Friday Jan 13th. Site closes 3pm January 15th.</p>
+ 
 <p class="amber-text lighten-3-text">Event Location</p>
  <p>Double Tree by Hilton - Seatac Airport<br />
 18740 International Boulevard<br />
 Seattle, WA 98188</p>
-<p class="amber-text lighten-3-text">Reservations</p>
- <p><a href="https://resweb.passkey.com/Resweb.do?mode=welcome_ei_new&eventID=14550545">Link for reservations</a></p>
- <p>Phone Number for reservations  1-800-HILTONS. (reference SCA 12th Night)</p>
- <p>*Rooms on the penthouse level are available for additional fees. Contact the event team at  TwelfthNIght2017@wyewood.org with your request.</p>
-
 
 <p class="amber-text lighten-3-text">Parking</p>
 <p>Parking at the hotel is $12 per day. Guests of the hotel receive in/out privileges. </p>
-	  
-	  
+
+ 
 <div>
     <br><br>
     </div>
