changing the style color

--- a/Site/dirtydozen.html
+++ b/Site/dirtydozen.html
@@ -18,21 +18,21 @@
     </script>
 		<main>
 	  <div class="section no-pad-bot" id="index-banner">
-    <div class="container z-depth-3 blue-grey darken-2">
+    <div class="container z-depth-3 blue-grey darken-2   flow-text" style="color:#cfd8dc">
       <br><br>
 	  
 	  
 	  
-      <h2 class="header center amber-text lighten-3-text header-shadow" >
+      <h2 class="header center amber-text  header-shadow" >
       Dirty Dozen Largess Tournament
       </h2>
           <div class="row ">
-      <div class="container">
-<p class="grey-text lighten-6-text flow-text">Greetings Artisans of An Tir!</p>
-<p class="grey-text lighten-6-text flow-text">12th Night 2017 will host a Largess enhancing event popularly known as a Dirty Dozen Donation Derby!</p>
-<p class="grey-text lighten-6-text flow-text">This is an opportunity to show off any of your new or longtime favorite skills in a “theme and variations” demonstration. Making 12 of a same item or skill in various interpretations!</p>
-<p class="grey-text lighten-6-text flow-text">The “rules” for this derby are:</p>
-<ol class="grey-text lighten-6-text flow-text">
+      <div class="container" >
+<p class="flow-text">Greetings Artisans of An Tir!</p>
+<p class="flow-text">12th Night 2017 will host a Largess enhancing event popularly known as a Dirty Dozen Donation Derby!</p>
+<p class="flow-text">This is an opportunity to show off any of your new or longtime favorite skills in a “theme and variations” demonstration. Making 12 of a same item or skill in various interpretations!</p>
+<p class="flow-text">The “rules” for this derby are:</p>
+<ol class="flow-text">
 <li>Entrants must create twelve items, suitable for Largess, and that are based on a single theme.</li>
 <li>Entries must have a common element/theme (toys, hats, needle books, time period), and be complete within the entry (games must each include all elements, socks are in sets of two!)</li>
 <li>Within the common element, the variation is in the hands of the artisan!</li>
