--- a/Site/event-staff.html
+++ b/Site/event-staff.html
@@ -23,14 +23,18 @@
 	  
 	  
 	  
-      <h2 class="header center amber-text lighten-3-text header-shadow" >
+      <h2 class="header center amber-text header-shadow" >
        Event Staff
       </h2>
-      <div class="container grey-text lighten-6-text flow-text">
-      <p class="amber-text lighten-3-text ">Event Steward:</p>
+      <div class="container flow-text" style="color:#cfd8dc">
+      <p class="amber-text ">Event Steward:</p>
  <p>Liadain ni Sheanachain TwelfthNight2017@wyewood.org</p>
- <p class="amber-text lighten-3-text ">Contingency Deputy:</p>
+ <p class="amber-text ">Contingency Deputy:</p>
  <p>Constantine Trewpeny jpfafman@yahoo.com</p>
+ <p class="amber-text ">Royal Liaison:</p>
+ <p>Alessandra de Montefeltro Alessandra.dm@colecat.net</p>
+ <p class="amber-text ">Merchant Steward:</p>
+ <p>Xenos the Butcher Crazedcamel@gmail.com</p>
 	  
         
       </div>
