--- a/Site/location.html
+++ b/Site/location.html
@@ -9,7 +9,7 @@
 	<div id="style"></div>
 
   </head>
-  <body  class="blue-grey darken-4 ">
+  <body  class="blue-grey darken-4 " >
 	<div id="header"></div>
     <script>
         $("#header").load("includes/header.html");
@@ -18,34 +18,34 @@
     </script>
 		<main>
 	  <div class="section no-pad-bot" id="index-banner">
-    <div class="container z-depth-3 blue-grey darken-2  flow-text">
+    <div class="container z-depth-3 blue-grey darken-2  flow-text" >
       <br><br>
 	  
 	  
 	  
-      <h2 class="header center amber-text lighten-3-text header-shadow" >
+      <h2 class="header center amber-text  header-shadow" >
        Gate and Parking Information
       </h2>
 	  
-      <div class="container grey-text lighten-6-text">
+      <div class="container " style="color:#cfd8dc">
       
         
 
 
  
-<p class="amber-text lighten-3-text">Site Fee</p>
+<p class="amber-text ">Site Fee</p>
 <p>Adults, $25 (member discount -$5). </p>
 <p>Youth under 18, FREE</p>
 
-<p class="amber-text lighten-3-text">Site Opens</p> 
+<p class="amber-text ">Site Opens</p> 
 <p> 3pm on Friday Jan 13th. Site closes 3pm January 15th.</p>
  
-<p class="amber-text lighten-3-text">Event Location</p>
+<p class="amber-text ">Event Location</p>
  <p>Double Tree by Hilton - Seatac Airport<br />
 18740 International Boulevard<br />
 Seattle, WA 98188</p>
 
-<p class="amber-text lighten-3-text">Parking</p>
+<p class="amber-text ">Parking</p>
 <p>Parking at the hotel is $12 per day. Guests of the hotel receive in/out privileges. </p>
 
  
