--- a/Site/not_found.html
+++ b/Site/not_found.html
@@ -28,7 +28,7 @@
       </h2>
       <div class="row center">
       
-        <p class="grey-text lighten-6-text">Page not Found.</p>
+        <p style="color:#cfd8dc">Page not Found.</p>
       </div>
 	  
 	  
