--- a/Site/volunteers.html
+++ b/Site/volunteers.html
@@ -23,13 +23,13 @@
 	  
 	  
 	  
-      <h2 class="header center amber-text lighten-3-text header-shadow" >
+      <h2 class="header center amber-text header-shadow" >
        Volunteers
       </h2>
       <div class="row center">
       
-        <p class="grey-text lighten-6-text">Teamwork Makes the Dream Work</p>
-		 <p class="grey-text lighten-6-text">Currently seeking volunteers to organize site tokens and decorations. Contact the <a href="mailto:TwelfthNight2017@wyewood.org">Event Steward</a>.</p>
+        <p style="color:#cfd8dc">Teamwork Makes the Dream Work</p>
+		 <p style="color:#cfd8dc">Currently seeking volunteers to organize site tokens and decorations. Contact the <a href="mailto:TwelfthNight2017@wyewood.org">Event Steward</a>.</p>
       </div>
 
   
