--- a/Site/QRT.html
+++ b/Site/QRT.html
@@ -18,21 +18,21 @@
     </script>
 		<main>
 	  <div class="section no-pad-bot" id="index-banner">
-    <div class="container z-depth-3 blue-grey darken-2  flow-text">
+    <div class="container z-depth-3 blue-grey darken-2  flow-text" style="color:#cfd8dc">
       <br><br>
 	  
 	  
 	  
-      <h2 class="header center amber-text lighten-3-text header-shadow" >
+      <h2 class="header center amber-text  header-shadow" >
        Greetings Rapier fighters<br /> of An Tir!
       </h2>
       <div class="row center">
       <div class="container">
       
-        <p class="grey-text lighten-6-text">Come to 12th Night and fight for the honor to represent Queen and Kingdom as An Tir's Rapier champion.</p>
-		 <p class="grey-text lighten-6-text">Fight for the honor of the Queen of AnTir.</p> 
+        <p class="">Come to 12th Night and fight for the honor to represent Queen and Kingdom as An Tir's Rapier champion.</p>
+		 <p class="">Fight for the honor of the Queen of AnTir.</p> 
 
-		 <p class="grey-text lighten-6-text">We are planning on a Sweet 16 format to be held Saturday evening.</p>
+		 <p class="">We are planning on a Sweet 16 format to be held Saturday evening.</p>
       </div>
 
 
