--- a/Site/index.html
+++ b/Site/index.html
@@ -26,7 +26,7 @@
       </h1>
       <div class="row center">
       <img src="img/an_tir_banner_noborder.jpg" class = "responsive-img z-depth-2">
-        <h5 class="header col s12 light grey-text lighten-5-text ">Hosted by the Barony of Wyewood in SeaTac, Washington <br />
+        <h5 class="header col s12 light white-text flow-text ">Hosted by the Barony of Wyewood in SeaTac, Washington <br />
           January 13-15th, 2017 (A.S. LI)</h5>
 		  <br><br>
       </div>
@@ -37,13 +37,13 @@
 
 
   <div class="container">
-    <div class="section grey-text lighten-5-text">
+    <div class="section white-text">
 
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-           <h5 class="center"> <a class="grey-text lighten-5-text" href="location.html">
+           <h5 class="center"> <a class="white-text " href="location.html">
 				<img src = "img/pavilions_300x208.jpg" class = "responsive-img z-depth-4"><br />Site Info
 			</a>
             </h5>
@@ -53,7 +53,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h5 class="center"> <a class="grey-text lighten-5-text" href="schedule.html">
+            <h5 class="center"> <a class="white-text " href="schedule.html">
 				<img src = "img/august_300x208.jpg"  class = "responsive-img z-depth-4"> <br />Schedule
 			</a>
           </h5>
@@ -64,7 +64,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h5 class="center"> <a class="grey-text lighten-5-text" href="event-staff.html">
+            <h5 class="center"> <a class="white-text " href="event-staff.html">
 				<img src="img/babel_300x208.jpg"  class = "responsive-img z-depth-4"><br />Event Staff
 			 </a>
             </h5>
