--- a/Site/merchants.html
+++ b/Site/merchants.html
@@ -23,15 +23,15 @@
 	  
 	  
 	  
-      <h2 class="header center amber-text lighten-3-text header-shadow" >
+      <h2 class="header center amber-text  header-shadow" >
        Merchant Registration Packet:
       </h2>
       <div class="row center ">
 
-      <div class="container">
+      <div class="container" style="color:#cfd8dc">
       
-        <p class="grey-text lighten-6-text">Pre-registration will be accepted beginning May 1st.</p>
-		<p class="grey-text lighten-6-text">Contact Xenox the Butcher CrazedCamel@gmail.com</p>
+        <p class="">Pre-registration will be accepted beginning May 1st.</p>
+		<p class="">Contact Xenox the Butcher CrazedCamel@gmail.com</p>
       </div>
       
 
