--- a/Site/schedule.html
+++ b/Site/schedule.html
@@ -18,17 +18,18 @@
     </script>
 		<main>
 	  <div class="section no-pad-bot" id="index-banner">
-    <div class="container z-depth-3 blue-grey darken-2   flow-text">
+    <div class="container z-depth-3 blue-grey darken-2   flow-text" style="color:#cfd8dc">
       <br><br>
 	  
 	  
 	  
-      <h2 class="header center amber-text lighten-3-text header-shadow" >
+      <h2 class="header center amber-text header-shadow" >
        Event Schedule
       </h2>
       <div class="row center">
       
-        <p class="grey-text lighten-6-text">No information yet - come back later</p>
+        <p style="color:#cfd8dc">Site Opens: 3pm on Friday Jan 13th. 
+		<br />Site closes 3pm January 15th.</p>
       </div>
 
 
