adding welcoming text about event to index

--- a/Site/index.html
+++ b/Site/index.html
@@ -26,9 +26,18 @@
       </h1>
       <div class="row center">
       <img src="img/an_tir_banner_noborder.jpg" class = "responsive-img z-depth-2">
-        <h5 class="header col s12 light white-text flow-text ">Hosted by the Barony of Wyewood in SeaTac, Washington <br />
+      <h2 class="header center amber-text lighten-3-text header-shadow">Long live the King and Queen of AnTir!</h2>
+
+ <h4 class="container flow-text left-align" style="color:#cfd8dc">The Barony of Wyewood is again proud to host An Tir’s Twelfth Night Coronation. </h4>
+<p></p>
+<h4 class="container flow-text left-align" style="color:#cfd8dc">Join us as we attend King Kjartan and Queen Sha’ya at their final court; rejoice at the coronation of Jarl Styrkarr and Dagrun Stjarna as the new monarchs of this great land. </h4>
+<p></p>
+ <h4 class="container flow-text left-align" style="color:#cfd8dc">There will be much to enjoy at this event - the Queen’s Rapier Championship Tournament, auctions, contests, merchants, plus an entire floor of vigils and royalty!
+</h4>
+<p></p>
+        <h5 class="header col s12 light flow-text " style="color:#cfd8dc">Hosted by the Barony of Wyewood in SeaTac, Washington <br />
           January 13-15th, 2017 (A.S. LI)</h5>
-		  <br><br>
+<p>&nbsp; </p>
       </div>
 
 
@@ -37,7 +46,7 @@
 
 
   <div class="container">
-    <div class="section white-text">
+    <div class="section" style="color:#cfd8dc">
 
       <!--   Icon Section   -->
       <div class="row">
